[gd_scene load_steps=12 format=3 uid="uid://dq1hkfnjvpv5o"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_dx3m0"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_u8nlb"]
[ext_resource type="PackedScene" uid="uid://bnvgfvvpsk2m2" path="res://ball.tscn" id="2_byecd"]
[ext_resource type="FontFile" uid="uid://3sngd4ma6okj" path="res://assets/bit5x3.ttf" id="2_c0rli"]
[ext_resource type="Script" path="res://scripts/opponent.gd" id="2_d7hsm"]
[ext_resource type="PhysicsMaterial" uid="uid://d0ena0xvo3spr" path="res://bounce_material.tres" id="2_pax5g"]
[ext_resource type="Script" path="res://scripts/ball_spawner.gd" id="3_31ywv"]

[sub_resource type="LabelSettings" id="LabelSettings_5ex3f"]
font = ExtResource("2_c0rli")
font_size = 100

[sub_resource type="RectangleShape2D" id="RectangleShape2D_txqu6"]
size = Vector2(20, 118)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_a2wed"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_t6cwl"]
a = Vector2(0, 643)
b = Vector2(3.8147e-06, -1)

[node name="Main" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_dx3m0")

[node name="PlayerScoreText" type="Label" parent="GameManager"]
z_index = 10
offset_left = 298.0
offset_top = 63.0
offset_right = 341.0
offset_bottom = 168.0
text = "0"
label_settings = SubResource("LabelSettings_5ex3f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpponentScoreText" type="Label" parent="GameManager"]
z_index = 10
offset_left = 806.0
offset_top = 63.0
offset_right = 849.0
offset_bottom = 168.0
text = "0"
label_settings = SubResource("LabelSettings_5ex3f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" type="CharacterBody2D" parent="." groups=["Player"]]
position = Vector2(64, 304)
slide_on_ceiling = false
script = ExtResource("1_u8nlb")

[node name="Line2D" type="Line2D" parent="Player"]
points = PackedVector2Array(0, -40, 0, 80)
width = 22.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 20)
shape = SubResource("RectangleShape2D_txqu6")

[node name="Opponent" type="CharacterBody2D" parent="." groups=["Player"]]
position = Vector2(1088, 304)
slide_on_ceiling = false
script = ExtResource("2_d7hsm")

[node name="Line2D" type="Line2D" parent="Opponent"]
points = PackedVector2Array(0, -40, 0, 80)
width = 22.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Opponent"]
position = Vector2(0, 20)
shape = SubResource("RectangleShape2D_txqu6")

[node name="RaycastUp" type="RayCast2D" parent="Opponent"]
position = Vector2(0, -39)
target_position = Vector2(0, -40)

[node name="RaycastDown" type="RayCast2D" parent="Opponent"]
position = Vector2(0, 80)
target_position = Vector2(0, 40)

[node name="Boundaries" type="Node2D" parent="."]

[node name="BoundaryUp" type="StaticBody2D" parent="Boundaries"]
physics_material_override = ExtResource("2_pax5g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/BoundaryUp"]
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_a2wed")

[node name="BoundaryDown" type="StaticBody2D" parent="Boundaries"]
position = Vector2(0, 648)
rotation = 3.14159
physics_material_override = ExtResource("2_pax5g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/BoundaryDown"]
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_a2wed")

[node name="BallSpawner" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(564, 328)
script = ExtResource("3_31ywv")
ball_scene = ExtResource("2_byecd")
launch_speed = 1000.0

[node name="PlayerGoal" type="Area2D" parent="."]
position = Vector2(-25, 329)
rotation = 3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerGoal"]
position = Vector2(-4.9992, -316)
shape = SubResource("SegmentShape2D_t6cwl")

[node name="OpponentGoal" type="Area2D" parent="."]
position = Vector2(1179, 329)

[node name="CollisionShape2D" type="CollisionShape2D" parent="OpponentGoal"]
position = Vector2(-5, -323)
shape = SubResource("SegmentShape2D_t6cwl")

[node name="Net" type="Line2D" parent="."]
position = Vector2(564, -10)
points = PackedVector2Array(0, 0, 0, 658)

[connection signal="body_entered" from="PlayerGoal" to="GameManager" method="_on_player_goal_body_entered"]
[connection signal="body_entered" from="OpponentGoal" to="GameManager" method="_on_opponent_goal_body_entered"]
